# fastapi

./: .gitignore  Dockerfile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: deploy.yaml
helm/: values.yaml
helm/templates/: deployment.yaml  service.yaml
src/: main.py
src/pdf_generatror/: pdf_controller.py  pdf_service.py
tests/integrations_tests/: test_ pdf_generator.py
tests/unit_tests/: test_pdf_generator.py
